cloud-mesh-poc/service-mesh-config/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dcmg-accounts-vs
  namespace: infra
spec:
  hosts:
  - cards.dgcp.cloud
  gateways:
  - dcmg-accounts-gateway
  http:
  - match:
    - uri:
        prefix: /data
    route:
    - destination:
        host: bff-accounts
        port:
          number: 5000
